--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "playwright": "^1.38.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "commander": "^11.0.0",
+    "dotenv": "^16.3.1"
   }
 }
