--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .idea
 node_modules
 .env
+/test-results/
+/playwright-report/
+/playwright/.cache/
+/test-results/
+/playwright-report/
+/playwright/.cache/
