--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@playwright/test": "^1.38.1",
     "@types/node": "^20.8.0",
     "playwright": "^1.38.1",
+    "prettier": "3.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
