--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "commander": "^11.0.0",
     "dotenv": "^16.3.1"
   }
